refactor(posts): remove filters from post controller
Signed-off-by: RadovanTomik <radovan.tomasik@bbmri-eric.eu>